<resources>
    <string name="app_name">Orderfy</string>
    <string name="home_label">Productos</string>
    <string name="basket_shopping_label">Cesta</string>
    <string name="orders_label">Pedidos</string>
    <string name="img_desc">Image description</string>
    <string name="product_actual_price_text"><strike>20€</strike></string>
    <string name="product_offer_percent_text">25% de descuento</string>
    <string name="add_product_img_btn_desc">Add product image</string>
    <string name="product_details_price_value">%.02f€</string>
    <string name="product_details_price_tv_text">%.02f€</string>
    <string name="product_details_price_discount_value"><strike>%s€</strike></string>
    <string name="product_discount_2_1_info">Descuento 2x1</string>
    <string name="product_discount_bulk_info">Más de 3u, precio a 19€/u</string>
    <string name="product_details_button_text_add_to_cart">Añadir a la cesta</string>
    <string name="basket_shopping_button_pay_text">Pagar</string>
    <string name="basket_shopping_empty_state_text">Cesta vacía...</string>
    <string name="toast_message_add_product_basket_shopping">Producto añadido a la cesta</string>
    <string name="toast_message_add_product_basket_shopping_error">Error al añadir el producto a la cesta</string>
    <string name="product_details_button_text_go_to_cart">Ir a la cesta</string>
    <string name="delete_dialog_title_text">¿Está seguro?</string>
    <string name="delete_cart_item_message_text">Al continuar, el artículo seleccionado se eliminará de su cesta.</string>
    <string name="basket_shopping_dialog_cancel_btn">Cancelar</string>
    <string name="delete_dialog_delete_btn_text">Eliminar</string>
    <string name="price_card_discount_label_string">Descuento</string>
    <string name="price_card_divider_description">Divider</string>
    <string name="price_card_total_label_text">Precio total:</string>
    <string name="price_card_items_string">Artículos(%d)</string>
    <string name="price_text">%.02f€</string>
    <string name="order_summary_items_label">Artículos:</string>
    <string name="price_card_status_label_string">Estado del pedido:</string>
    <string name="back_to_home_text">Ir al inicio</string>
    <string name="order_success_message_text">Gracias por su compra</string>
    <string name="success_label">Pedido correcto</string>
    <string name="process_order_msg">Procesando tu pedido...</string>
    <string name="redirect_home_timer_text">Redirigiendo al inicio en %s</string>
    <string name="order_date_text">Comprado el: %s %s, %s</string>
    <string name="order_items_count_text">%s artículos comprados</string>
    <string name="orders_empty_text_view_text">No hay pedidos...</string>
    <string name="basket_product_price_discount_text"><![CDATA[<del>%.02f€</del>]]></string>
    <string name="product_none">\"\"</string>
</resources>