<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/card_elevation_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/card_product_image_height"
            android:background="@drawable/round_outline_rect"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/product_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/product_name_tv_margin_start"
            android:layout_marginTop="@dimen/card_product_name_tv_margin_top"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_image_view"
            tools:text="Cabify Voucher" />

        <TextView
            android:id="@+id/product_offer_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/product_offer_value_tv_margin_start"
            android:maxLines="2"
            android:minLines="1"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name_tv"
            tools:text="@string/product_offer_percent_text" />

        <TextView
            android:id="@+id/product_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/product_price_tv_margin_start"
            android:layout_marginTop="@dimen/card_product_price_tv_margin_top"
            android:layout_marginBottom="@dimen/product_price_tv_margin_bottom"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_offer_value_tv"
            tools:text="19€" />

        <TextView
            android:id="@+id/product_actual_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_general_6"
            android:textSize="@dimen/text_size_12"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/product_price_tv"
            app:layout_constraintStart_toEndOf="@+id/product_price_tv"
            app:layout_constraintTop_toTopOf="@+id/product_price_tv"
            tools:text="@string/product_actual_price_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
