<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_summary_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_general_8"
    android:clickable="false"
    android:focusable="true"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/card_elevation_4"
    app:strokeColor="#CCCCCC"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/order_summary_card_padding">

        <TextView
            android:id="@+id/order_summary_id_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ABCDEF123GHIJ" />

        <TextView
            android:id="@+id/order_summary_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_date_tv_margin_top"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/dark_gray_order_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_summary_id_tv"
            tools:text="Pedido el: 20 de septiembre de 2022" />

        <ImageView
            android:id="@+id/order_card_dotted_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/order_card_dotted_divider_height"
            android:layout_marginTop="@dimen/order_card_dotted_divider_margin_top"
            android:contentDescription="@string/price_card_divider_description"
            android:layerType="software"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_summary_date_tv"
            app:srcCompat="@drawable/dotted_line_drawable" />

        <TextView
            android:id="@+id/order_summary_status_label_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_status_label_tv_margin_top"
            android:text="@string/price_card_status_label_string"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/dark_gray_order_summary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_card_dotted_divider" />

        <TextView
            android:id="@+id/order_summary_status_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/order_summary_status_value_tv_margin_start"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/order_summary_status_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/order_summary_status_label_tv"
            app:layout_constraintTop_toTopOf="@+id/order_summary_status_label_tv"
            tools:text="Entregado" />

        <TextView
            android:id="@+id/order_summary_items_label_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_items_label_tv_margin_top"
            android:text="@string/order_summary_items_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/dark_gray_order_summary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_summary_status_label_tv" />

        <TextView
            android:id="@+id/order_summary_items_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/order_summary_items_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/order_summary_items_label_tv"
            tools:text="4 artículos comprados" />

        <TextView
            android:id="@+id/order_summary_price_label_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/order_summary_price_label_tv_margin_top"
            android:text="@string/price_card_total_label_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/dark_gray_order_summary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_summary_items_label_tv" />

        <TextView
            android:id="@+id/order_summary_total_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/order_summary_price_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/order_summary_price_label_tv"
            tools:text="20€" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>