<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <include
        android:id="@+id/loader_layout"
        layout="@layout/layout_loader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/product_details_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_details_scroll_view" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginBottom="@dimen/margin_general">

            <View
                android:id="@+id/view3"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_general"
                android:background="@drawable/sphere"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/product_details_image_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/product_details_image_view_height"
                android:layout_marginTop="@dimen/margin_general"
                android:background="@drawable/round_outline_rect"
                android:contentDescription="@string/img_desc"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/product_details_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general"
                android:layout_marginEnd="@dimen/product_details_text_view_margin_end"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_details_image_view"
                tools:text="Product name" />

            <TextView
                android:id="@+id/product_details_offer_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general_4"
                android:maxLines="2"
                android:minLines="1"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_details_title_tv"
                tools:text="@string/product_offer_percent_text" />

            <TextView
                android:id="@+id/product_details_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general_8"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_details_offer_value_tv"
                tools:text="20€" />

            <Button
                android:id="@+id/product_details_add_cart_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general"
                android:backgroundTint="@color/purple_500"
                android:padding="@dimen/product_details_add_cart_btn_padding"
                android:text="@string/product_details_button_text_add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_details_price_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>